# trade-data-collector

./: .env.example  Cargo.toml  IOrderBookV4.json  README.md  flake.nix  fuzz_test.csv  order_events.csv
.github/workflows/: collector.yaml
src/: abi_loader.rs  cli.rs  config.rs  constants.rs  csv_manager.rs  event_collector.rs  lib.rs  main.rs  tests.rs  utils.rs
