[package]
name = "trade-data-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.32"
csv = "1.3.1"
dotenv = "0.15.0"
env_logger = "0.11.7"

ethers = "2.0.0"
ethers-contract = "2.0.0"
ethers-core = "2.0.0"
ethers-providers = "2.0.0"
hex = "0.4.3"
hex-literal = "0.4.1"


log = "0.4.14"
mockito = "0.31.0"
proptest = "1.0.0"
proptest_async = { version = "0.1.1", default-features = false, features = ["tokio"] }
reqwest = "0.11"
reth = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
tempfile = "3.2.0"
tokio = { version = "1.0", features = ["full"] }
ureq = "2.4.0"
